# LiteNN

./: .gitignore  CMakeLists.txt  README.md  neural_network.cpp  neural_network.h  nn_tests.cpp  nn_tests.h  nn_tests_performance.cpp  slicer_execute.sh  standalone_tests.cpp  template_tensors.cpp  tensor_processor.cpp  tensor_processor.h  tensor_processor_impl.cpp  tensor_processor_impl_gpu.cpp  tensor_processor_impl_gpu.h  tensor_processor_impl_gpu_ds.cpp  tensor_processor_impl_gpu_init.cpp  tensors.cpp  tensors.h  tensors_2.cpp
cmake/: includes.cmake  kernel_slicer.cmake
direct/: nnd_tests.cpp
include/LiteNN/: neural_network.h  siren.h  tensor_compiler.h  tensor_processor_impl.h
include/LiteNN/direct/: neural_network.h  siren.h
python_scripts/: test_perf.py  torch_perf.ipynb  torch_perf_cnn.ipynb  torch_perf_siren.ipynb  torch_test.ipynb
shaders_gpu/: build.sh  common_gpu.h  kernel1D_add.comp  kernel1D_copy.comp  kernel1D_cos.comp  kernel1D_dilate.comp  kernel1D_div.comp  kernel1D_equal.comp  kernel1D_exp.comp  kernel1D_fill.comp  kernel1D_flip.comp  kernel1D_get_output.comp  kernel1D_greater.comp  kernel1D_greater_equal.comp  kernel1D_less.comp  kernel1D_less_equal.comp  kernel1D_log.comp  kernel1D_logical_and.comp  kernel1D_logical_or.comp  kernel1D_max.comp  kernel1D_maximum.comp  kernel1D_min.comp  kernel1D_minimum.comp  kernel1D_mul.comp  kernel1D_not.comp  kernel1D_not_equal.comp  kernel1D_osum.comp  kernel1D_pad.comp  kernel1D_pow.comp  kernel1D_set_input.comp  kernel1D_sin.comp  kernel1D_smax_diff.comp  kernel1D_sqrt.comp  kernel1D_sub.comp  kernel1D_sum.comp  kernel1D_urand.comp  kernel1D_where.comp  kernel2D_matmul_transposed.comp  kernel3D_conv2d.comp  kernel3D_conv3d.comp  (+7 more)
src/: CMakeLists.txt  hashgrid.cpp  hashgrid.h  hge.cpp  loss_functions.h  neural_network.cpp  neural_network.h  properties.cmake  siren.h  statistics.h  tensor_compiler.cpp  tensor_compiler.h  tensor_processor.cpp  tensor_processor.h  tensor_processor_impl.cpp  tensor_processor_impl.h  tensor_token.cpp
src/direct/: neural_network.cpp  neural_network.h  siren.cpp  siren.h  tensors.cpp  tensors.h
tests/: CMakeLists.txt  hge.cpp  nn_tests.cpp  nn_tests.h  nn_tests_performance.cpp  properties.cmake  standalone_tests.cpp
tests/direct/: nnd_tests.cpp
